fixed an overflow

--- a/mediaq.css
+++ b/mediaq.css
@@ -9,6 +9,10 @@
     line-height: 20px;
   }
 
+  .headimgg {
+    width: 100%;
+  }
+
   .nextt h1 {
     font-size: 20px;
     line-height: 27px;
