--- a/style.css
+++ b/style.css
@@ -209,6 +209,7 @@ header .purple1 {
   display: flex;
   flex-wrap: nowrap;
   margin-left: 10px;
+  align-items: center;
 }
 
 .poppp {
